# Spectrum

./: CMakeLists.txt  README.md  main.cpp
inc/: mathcommon.h  sdrDevice.h
inc/iio/: iio_device_scan.hpp
inc/qt/: thread_iio.hpp
sources/: device_config.cpp  dial_change.cpp  display.cpp  selectnumber.cpp
sources/forms/: device_config.ui  ui_device_config.h
sources/headers/: device_config.h  dial_change.h  display.h  selectnumber.h
src/: iio_device_scan.cpp  qcustomplot.cpp  sdrDevice.cpp  thread_iio.cpp
